--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,12 @@ html {
 }
 
 .page {
+  display: flex;
   inline-size: 1200px;
   block-size: 100%;
+  justify-content: center;
+  align-items: center;
+  /* place-items: center; тоже самое но короче */
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -38,6 +42,7 @@ ol {
 }
 
 /* Кастомный скроллбар */
+
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
 }
@@ -47,5 +52,313 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: end;
+  gap: 30px;
+  width: 1140px;
+  min-height: 0;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; /* Равномерное распределение по горизонтали */
+  align-items: flex-start; /* Прижимаем к верху по вертикали */
+  width: 100%;
+}
+
+.content__list-container {
+  position: relative;
+  height: 298px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-width: 390px;
+  width: 100%;
+  gap: 26px;
+}
+
+.result__video-container {
+  position: relative;
+  height: 386px;
+  width: 711px;
+  margin-bottom: 16px;
+}
+
+.result__video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover; /* Видео целиком помещается в обложку*/
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+
+.content__list-container:last-child {
+  gap: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-direction: row; /* работает без указания */
+  align-items: flex-start; /* Прижимаем к верху */
+  min-width: 0;
+}
+
+.content__video-card-thumbnail {
+  height: 103px;
+  min-width: 194px;
+  width: 194px;
+  object-fit: cover;
+  object-position: center;
+  flex-shrink: 0; /*Запрещаем сжатие изображения  */
+  display: block;
+  padding-right: 3px;
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-grow: 1;
+  /*min-width: 0;  Критично для работы text-overflow */
+  flex-direction: column;
+  overflow: hidden; /* Добавляем обрезку */
+  gap: 6px;
+  
+}
+
+.search-form__fieldset-title {
+  font-family: 'Fira Sans Condensed', serif;
+  font-size: 18px;
+  line-height: 1;
+  font-weight: 400;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-size: 74px;
+  line-height: 0.94;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+  /* color: rgb(255 255 255 / 0.2)'' */
+}
+
+.content__card-link {
+  display: block; /* тобы ссылка стала блочным элементом — это позволит отображать фоновый цвет */
+  color: #fff;
+  text-decoration: none;
+}
+
+.content__list-item {
+  padding-right: 3px;
+  padding-block: 3px;
+}
+
+.content__card-link_current:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.content__card-link_current:active {
+  background-color: #545050;
+  
+}
+
+.content__card-link_current:focus {
+  outline: none;
+}
+
+.content__card-link_current:focus-visible {
+  outline: 1px solid currentColor;
+  outline-offset: 0px; 
+  
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  line-height: 1;
+  font-weight: 700;
+  text-transform: uppercase;
+  /* Обработка переполнения */
+  white-space: nowrap; /* Запрет переноса строк */
+  overflow: hidden; /* Скрытие выходящего за границы текста */
+  text-overflow: ellipsis; /* Добавление "…" при переполнении */
+  max-width: 100%; /* Ограничение по ширине родителя */
+}
+
+.content__video-card-description {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 16.2px;
+  white-space: nowrap;
+  /* скрипт */
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  line-clamp: 1;
+  text-overflow: ellipsis;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+/* Для чекбокса. Основной скрыт.ЧТобы через таб видеть */
+
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: fit-content;
+  margin-top: 5px;
+}
+
+.search-form__textfield {
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
+  width: 225px;
+  border-right: none;
+  border-left: none;
+  color: #fff;
+  background-color: transparent;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1;
+  appearance: none; /* Запрет переноса строк */
+  overflow: visible; /* Скрытие выходящего за границы текста */
+  outline: none; /* Важно: сбрасываем outline у самого input */
+}
+
+.search-form__textfield::placeholder {
+  color: rgb(255 255 255 / 0.7);
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield:focus-visible {
+  outline: 1px solid currentColor;
+  outline-offset: 2px;
+}
+
+.search-form__pseudo-checkbox {
+  /* display: inline-block; Для правильного отображения */
+  width: 18px;
+  height: 18px;
+  border: 1px solid #fff;
+  padding: 1px;
+  margin-right: 5px;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: '';
+  display: block;
+
+  background-color: #fff;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__label-text {
+  text-decoration: none;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.search-form__label:has(.search-form__checkbox:focus-visible) {
+  outline: 1px solid currentColor;
+  outline-offset: 2px;
+}
+
+.button {
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1;
+  letter-spacing: 0;
+}
+
+.button:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:focus-visible {
+  outline: 1px solid currentColor;
+  outline-offset: 2px;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
+  width: 194px;
+  height: 34px;
+}
+
+.more-button {
+  width: 100%;
+  height: 34px;
 }
